Improve code quality with wrapper.