@@ -1,13 +1,13 @@
 package com.blog.blogapi.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.blog.blogapi.dto.TagRequest;
 import com.blog.blogapi.dto.TagResponse;
+import com.blog.blogapi.exception.ResourceNotFoundException;
 import com.blog.blogapi.model.Tag;
 import com.blog.blogapi.repository.TagRepository;
 
@@ -15,12 +15,15 @@ import com.blog.blogapi.repository.TagRepository;
 @Transactional
 public class TagService {
     private final TagRepository tagRepository;
+    private final AuthorizationService authorizationService;
 
-    public TagService(TagRepository tagRepository) {
+    public TagService(TagRepository tagRepository, AuthorizationService authorizationService) {
         this.tagRepository = tagRepository;
+        this.authorizationService = authorizationService;
     }
 
     public TagResponse createTag(TagRequest request) {
+        authorizationService.checkAdmin();
         Tag tag = new Tag();
         tag.setName(request.getName());
         Tag saved = tagRepository.save(tag);
@@ -29,28 +32,31 @@ public class TagService {
 
     public TagResponse getTagById(Long id) {
         Tag tag = tagRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Tag not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Tag", "id", id));
         return toTagResponse(tag);
     }
 
     public List<TagResponse> getAllTags() {
         return tagRepository.findAll().stream()
                 .map(this::toTagResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public TagResponse updateTag(Long id, TagRequest request) {
+        authorizationService.checkAdmin();
         Tag tag = tagRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Tag not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Tag", "id", id));
         tag.setName(request.getName());
         Tag updated = tagRepository.save(tag);
         return toTagResponse(updated);
     }
 
     public void deleteTag(Long id) {
-        Tag tag = tagRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Tag not found"));
-        tagRepository.delete(tag);
+        authorizationService.checkAdmin();
+        if (!tagRepository.existsById(id)) {
+            throw new ResourceNotFoundException("Tag", "id", id);
+        }
+        tagRepository.deleteById(id);
     }
 
     private TagResponse toTagResponse(Tag tag) {
